# tiny-model-simplification-processor

./: CMakeLists.txt  LICENSE  README.md
model/: elephant.off
src/: CMakeLists.txt  engine.cpp  engine.h  geometry.cpp  geometry.h  main.cpp  solver.cpp  solver.h
tutorial/: README.md
